# CORP

./: .gitignore  .gitmodules  README.md
FalconChallenge/: .dockerignore  Dockerfile  Dockerfile.held_in_model  Dockerfile.held_in_model_lm  Dockerfile.held_in_model_lm_corp  Dockerfile.oracle_model  Dockerfile.oracle_model_lm  convert_nwb_to_tfrecords.ipynb  corp_decoder.py  corp_recalibrator.py  h2.ipynb  main.py  nwb_utils.py  paper_eval_models.ipynb  run_corp.sh  run_evalulator.py  styleguide.py  visualization.py
FalconChallenge/config/: CORP_test.yaml  CORP_val.yaml  falcon_held_in_model_held_out_eval.yaml  falcon_held_in_model_held_out_eval_corp.yaml  falcon_held_in_model_lm_held_out_eval.yaml  falcon_held_out_eval.yaml  falcon_held_out_eval_corp.yaml  falcon_held_out_oracle.yaml  falcon_oracle_model_held_out_eval.yaml  falcon_oracle_model_lm_held_out_eval.yaml
LanguageModelDecoder/: README.md
NeuralDecoder/: README.md  setup.py
NeuralDecoder/examples/: eval_model_cer.py  finetune_falcon_held_out_sessions.sh  train_falcon_held_out_oracle.sh  train_falcon_seed_model.sh  train_seed_model.sh  train_willett_nature_baseline.sh
NeuralDecoder/neuralDecoder/: models.py  neuralSequenceDecoder.py
NeuralDecoder/neuralDecoder/configs/: config.yaml
NeuralDecoder/neuralDecoder/datasets/: __init__.py  handwritingDataset.py
NeuralDecoder/neuralDecoder/utils/: lmDecoderUtils.py
OnlineRecalibrator/: LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py
OnlineRecalibrator/examples/: plot_error_rate_curve.ipynb  plot_offline_error_rate_curve.ipynb  plot_online_error_rate_curve.ipynb  run_no_recalibration.sh  run_recalibration.sh
OnlineRecalibrator/src/online_recalibrator/: __init__.py  online_recalibration_simulator.py  online_recalibration_simulator_main.py
OnlineRecalibrator/src/online_recalibrator/configs/: online_recalibration_simulator_config.yaml
falcon_corp/: corp_decoder.py  corp_recalibrator.py  main.py
falcon_corp/config/: CORP_val.yaml
(+15 files in other folders)
